src/test/deca/context/invalid/created/decl_var/unknown_variable.deca
// Description :
//    test d'une variable non initialisée
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12 : Expression non définie

{
int b = 4;

//doit être refusé
a = b;
}